test(dispatcher): update tests